--- a/index.html
+++ b/index.html
@@ -65,21 +65,44 @@
 
 <div id="services">
     <div class="services-content">
-        <h2>Our Services</h2>
 
         <div class="service">
-            <h3>Web Design</h3>
-            <p>We create visually appealing and user-friendly websites tailored to your brand and business goals.</p>
+            <img src="img/app_image.png" alt="">
+            <h3>APP DESIGN</h3>
+            <p>I specialize in crafting visually appealing 
+                and user-centric applications through 
+                comprehensive UI/UX design. 
+                My services include user research, 
+                interactive prototyping, 
+                and seamless collaboration with developers 
+                for a polished and engaging user experience. 
+                 </p>
         </div>
 
         <div class="service">
-            <h3>Digital Marketing</h3>
-            <p>Boost your online presence with our digital marketing strategies, including SEO, social media, and content marketing.</p>
+            <img src="img/ux_image.png" alt="">
+            <h3>UI/UX DESIGN</h3>
+            <p>I offer comprehensive UI/UX design services, 
+                including user-centric research, intuitive prototyping, 
+                and visually appealing designs. 
+                My collaborative approach ensures seamless 
+                implementation with developers, 
+                while ongoing adaptation and usability
+                 testing guarantee designs meet evolving
+                 user expectations and accessibility standards.</p>
         </div>
 
         <div class="service">
-            <h3>App Development</h3>
-            <p>Turn your ideas into reality with our custom mobile and web application development services.</p>
+            <img src="img/graphic_image.png" alt="">
+            <h3>GRAPHICS DESIGN</h3>
+            <p>I provide comprehensive graphic design services, 
+                specializing in brand identity creation, 
+                print and digital design, and the development of 
+                illustrations and infographics. 
+                My focus on collaboration ensures brand consistency
+                 across diverse materials, while optional motion 
+                graphics add dynamic visual storytelling to projects.
+                </p>
         </div>
     </div>
 </div>
