--- a/index.html
+++ b/index.html
@@ -1,111 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Ayotunde</title>
-</head>
-<body>
-
-<!-- nav section -->
-<nav class="navbar">
-    <img src="img/logo.png" alt="">
-    <ul>
+  </head>
+  <body>
+    <!-- nav section -->
+    <nav class="navbar">
+      <img src="img/logo.png" alt="" />
+      <ul>
         <li><a href="#home">HOME</a></li>
         <li><a href="#about">ABOUT</a></li>
         <li><a href="#services">SERVICES</a></li>
         <li><a href="#skills">SKILLS</a></li>
         <li><a href="#portfolio">PORTFOLIO</a></li>
         <li><a href="#contact">CONTACT</a></li>
-    </ul>
-</nav>
+      </ul>
+    </nav>
 
-<!-- hero section -->
+    <!-- hero section -->
 
-<div class="hero">
-    <div class="hero-content">
+    <div class="hero">
+      <div class="hero-content">
         <h1>Hello</h1>
         <h2>I'm <span>Ayotunde Samson.</span></h2>
-        <p>a passionate UI/UX designer dedicated to creating <br> 
-            visually stunning and user-centric digital experiences.<br>
-            I see myself as a problem solver, bridging the gap <br>
-             between user needs and business goals through <br>
-             thoughtful design.</p>
+        <p>
+          a passionate UI/UX designer dedicated to creating <br />
+          visually stunning and user-centric digital experiences.<br />
+          I see myself as a problem solver, bridging the gap <br />
+          between user needs and business goals through <br />
+          thoughtful design.
+        </p>
         <a href="#learn-more" class="cta-button">HIRE ME</a>
+      </div>
+      <img src="img/hero_image.png" alt="" />
     </div>
-    <img src="img/hero_image.png" alt="">
-</div>
 
-<div id="about">
-    <div class="about-content">
+    <div id="about">
+      <div class="about-content">
         <h2>ABOUT</h2>
         <p>I am a UI/UX Designer based in Nigeria</p>
-        <p>I prioritize a user-first approach, understanding user 
-            journeys, empathizing with needs, and crafting solutions 
-            that exceed expectations.</p>
-        <p>Explore our website to discover more about our projects, services, and the values that drive us. Join us on this exciting journey!</p>
+        <p>
+          I prioritize a user-first approach, understanding user journeys,
+          empathizing with needs, and crafting solutions that exceed
+          expectations.
+        </p>
+        <p>
+          Explore our website to discover more about our projects, services, and
+          the values that drive us. Join us on this exciting journey!
+        </p>
 
         <h5>Key Strength</h5>
         <ul>
-            <li>
-                Expert in UI/UX design with proficiency in wireframing, 
-      prototyping, and high-fidelity mockups.
-            </li>
-            <li>Skilled in user research, usability testing, and collaboration 
-                with cross-functional teams.</li>
-                <li>Passionate about staying updated with the latest design 
-                    trends and technologies.</li>
+          <li>
+            Expert in UI/UX design with proficiency in wireframing, prototyping,
+            and high-fidelity mockups.
+          </li>
+          <li>
+            Skilled in user research, usability testing, and collaboration with
+            cross-functional teams.
+          </li>
+          <li>
+            Passionate about staying updated with the latest design trends and
+            technologies.
+          </li>
         </ul>
+      </div>
     </div>
-</div>
 
+    <!-- Services -->
 
-<!-- Services -->
-
-<div id="services">
-    <div class="services-content">
-
+    <div id="services">
+      <div class="services-content">
         <div class="service">
-            <img src="img/app_image.png" alt="">
-            <h3>APP DESIGN</h3>
-            <p>I specialize in crafting visually appealing 
-                and user-centric applications through 
-                comprehensive UI/UX design. 
-                My services include user research, 
-                interactive prototyping, 
-                and seamless collaboration with developers 
-                for a polished and engaging user experience. 
-                 </p>
+          <img src="img/app_image.png" alt="" />
+          <h3>APP DESIGN</h3>
+          <p>
+            I specialize in crafting visually appealing and user-centric
+            applications through comprehensive UI/UX design. My services include
+            user research, interactive prototyping, and seamless collaboration
+            with developers for a polished and engaging user experience.
+          </p>
         </div>
 
         <div class="service">
-            <img src="img/ux_image.png" alt="">
-            <h3>UI/UX DESIGN</h3>
-            <p>I offer comprehensive UI/UX design services, 
-                including user-centric research, intuitive prototyping, 
-                and visually appealing designs. 
-                My collaborative approach ensures seamless 
-                implementation with developers, 
-                while ongoing adaptation and usability
-                 testing guarantee designs meet evolving
-                 user expectations and accessibility standards.</p>
+          <img src="img/ux_image.png" alt="" />
+          <h3>UI/UX DESIGN</h3>
+          <p>
+            I offer comprehensive UI/UX design services, including user-centric
+            research, intuitive prototyping, and visually appealing designs. My
+            collaborative approach ensures seamless implementation with
+            developers, while ongoing adaptation and usability testing guarantee
+            designs meet evolving user expectations and accessibility standards.
+          </p>
         </div>
 
         <div class="service">
-            <img src="img/graphic_image.png" alt="">
-            <h3>GRAPHICS DESIGN</h3>
-            <p>I provide comprehensive graphic design services, 
-                specializing in brand identity creation, 
-                print and digital design, and the development of 
-                illustrations and infographics. 
-                My focus on collaboration ensures brand consistency
-                 across diverse materials, while optional motion 
-                graphics add dynamic visual storytelling to projects.
-                </p>
+          <img src="img/graphic_image.png" alt="" />
+          <h3>GRAPHICS DESIGN</h3>
+          <p>
+            I provide comprehensive graphic design services, specializing in
+            brand identity creation, print and digital design, and the
+            development of illustrations and infographics. My focus on
+            collaboration ensures brand consistency across diverse materials,
+            while optional motion graphics add dynamic visual storytelling to
+            projects.
+          </p>
         </div>
+      </div>
     </div>
-</div>
-
-</body>
+  </body>
 </html>
