--- a/index.html
+++ b/index.html
@@ -75,48 +75,46 @@
         </ul>
         <a href="https://www.behance.net/Ayotunde-Samson" class="cta-button">DOWNLOAD CV</a>
       </div>
-      </div>
-
-      
-       </div>
     </div>
+       </div>
+
 
     <!-- Services -->
     
     <div id="services">
-        <div class="services-content">
-          <div class="service">
+      <h2>SERVICES</h2>
+        <div class="services-content">  
+          <div class="service_design">
             <img src="img/app_image.png" alt="" />
             <h3>APP DESIGN</h3>
             <p>
-              I specialize in crafting visually appealing and user-centric
-              applications through comprehensive UI/UX design. My services include
-              user research, interactive prototyping, and seamless collaboration
-              with developers for a polished and engaging user experience.
+              I specialize in crafting visually appealing<br> and user-centric 
+              applications through<br> comprehensive UI/UX design.<br> My services include
+              user research, <br>interactive prototyping,<br> and seamless collaboration
+              with developers <br> for a polished and engaging user experience.
             </p>
           </div>
   
-          <div class="service">
+          <div class="service_ux">
             <img src="img/ux_image.png" alt="" />
             <h3>UI/UX DESIGN</h3>
             <p>
-              I offer comprehensive UI/UX design services, including user-centric
-              research, intuitive prototyping, and visually appealing designs. My
-              collaborative approach ensures seamless implementation with
-              developers, while ongoing adaptation and usability testing guarantee
-              designs meet evolving user expectations and accessibility standards.
+              I offer comprehensive UI/UX design services, <br>including user-centric
+              research, intuitive prototyping,<br> and visually appealing designs. <br>My
+              collaborative approach ensures seamless <br>implementation with
+              developers, <br> while ongoing adaptation and usability <br> testing guarantee designs meet evolving <br>user expectations and accessibility standards.
             </p>
           </div>
   
-          <div class="service">
-            <img src="img/graphic_image.png" alt="" />
+          <div class="service_graphics">
+            <img src="img/graphics_image.png" alt="" />
             <h3>GRAPHICS DESIGN</h3>
             <p>
-              I provide comprehensive graphic design services, specializing in
-              brand identity creation, print and digital design, and the
-              development of illustrations and infographics. My focus on
-              collaboration ensures brand consistency across diverse materials,
-              while optional motion graphics add dynamic visual storytelling to
+              I provide comprehensive graphic design services, <br> specializing in
+              brand identity creation, <br> print and digital design, and the
+              development of <br> illustrations and infographics.<br> My focus on
+              collaboration ensures brand consistency <br> across diverse materials,
+              while optional motion <br> graphics add dynamic visual storytelling to
               projects.
             </p>
           </div>
