adjusted the portflio page

--- a/index.html
+++ b/index.html
@@ -189,6 +189,10 @@
               process. Elevate<br> your shopping experience with a <br>design that mirrors the elegance and <br>quality of the Beat by Dre brand.</p>
           </div>
         </div>
+
+        <div class="view">
+          <a href="http://https://www.behance.net/Ayotunde-Samson">VIEW ALL</a>
+        </div>
     </div>
     
 
