worked on the hire me

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@ rel="stylesheet">
           between user needs and business goals through <br />
           thoughtful design.
         </p>
-        <a href="#learn-more" class="cta-button">HIRE ME</a>
+        <a href="mailto:ayotusam44@yahoo.com" class="cta-button">HIRE ME</a>
+
 
         <div class="socials">
           <!-- <a href="Ayotunde Oluwademilade Samson
