--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ rel="stylesheet">
           <img src="img/logo.png" alt="Logo" />
       </div>
       <div class="nav-links">
-          <ul>
+          <ul class="nav-list">
               <li><a href="#home">HOME</a></li>
               <li><a href="#about">ABOUT</a></li>
               <li><a href="#services">SERVICES</a></li>
@@ -28,7 +28,13 @@ rel="stylesheet">
               <li><a href="#contact">CONTACT</a></li>
           </ul>
       </div>
+      <div class="hamburger-menu">
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+      </div>
   </nav>
+  
   
 
     <!-- hero section -->
