--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@ rel="stylesheet">
               <a href="mailto:ayotusam44@yahoo.com" class="cta-button">HIRE ME</a>
   
               <div class="social-links">
-                  <a href="https://www.facebook.com/Ayotunde Oluwademilade Samson" target="_blank"
+                  <a href="https://www.facebook.com/ayotunde.odusanya" target="_blank"
                       rel="noopener noreferrer">
                       <img src="img/ri_facebook-fill.png" alt="Facebook">
                   </a>
   
-                  <a href="https://twitter.com/Ayotunde Samson
+                  <a href="https://twitter.com/AyotundeSamson
                   " target="_blank" rel="noopener noreferrer">
                       <img src="img/pajamas_twitter.png" alt="Twitter">
                   </a>
@@ -77,7 +77,7 @@ rel="stylesheet">
   
     <!-- about -->
 
-    <div id="about">
+    <div id="about">`
       <h2>ABOUT</h2>
       <div class="about-content">
           <div class="about_img">
