fixing contact's error

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ rel="stylesheet">
   
     <!-- about -->
 
-    <div id="about">`
+    <div id="about">
       <h2>ABOUT</h2>
       <div class="about-content">
           <div class="about_img">
