--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 family=Nunito:wght@900&display=swap" 
 rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
-    <title>Ayotunde</title>
+    <title>Ayotunde Samson</title>
   </head>
   <body>
     <!-- nav section -->
